[arm] Add missing implementation in MacroAssembler to fix CPU(ARM_TRADITIONAL) build. https://bugs.webkit.org/show_bug.cgi?id=126064

Patch by Julien Brianceau <jbriance@cisco.com> on 2013-12-20
Reviewed by Mark Hahnenberg.

* assembler/MacroAssemblerARM.h:
(JSC::MacroAssemblerARM::branchTest8):

Canonical link: https://commits.webkit.org/144036@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160911 268f45cc-cd09-0410-ab3c-d52691b4dbfc